--- a/app/src/main/res/layout-v23/activity_language.xml
+++ b/app/src/main/res/layout-v23/activity_language.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textAllCaps="false"
     tools:context=".Language">
 
     <ImageView
@@ -26,6 +27,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/gradient_lang"
+        android:foreground="?attr/selectableItemBackground"
         android:text=""
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,12 +38,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/add_title"
-        android:textColor="@color/white"
         android:background="@drawable/gradient_lang"
         android:foreground="?attr/selectableItemBackground"
+        android:text="@string/add_title"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
