--- a/app/src/main/res/layout-v23/activity_language.xml
+++ b/app/src/main/res/layout-v23/activity_language.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textAllCaps="false"
-    tools:context=".Language">
+    tools:context=".LanguageActivity">
 
     <ImageView
         android:id="@+id/imageView2"
