--- a/app/src/main/res/menu/menu_edit_title.xml
+++ b/app/src/main/res/menu/menu_edit_title.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/open_title"
+        android:title="@string/open"
+        />
+
+    <item
         android:id="@+id/change_title"
-        android:title="@string/change_title"
+        android:title="@string/change"
         />
 
     <item
         android:id="@+id/remove_title"
-        android:title="@string/remove_title"
+        android:title="@string/remove"
         />
 </menu>
