--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/open_title"
+        android:id="@+id/open"
         android:title="@string/open"
         />
 
     <item
-        android:id="@+id/change_title"
+        android:id="@+id/change"
         android:title="@string/change"
         />
 
     <item
-        android:id="@+id/remove_title"
+        android:id="@+id/remove"
         android:title="@string/remove"
         />
 </menu>
