--- a/app/src/main/res/menu/menu_log_out.xml
+++ b/app/src/main/res/menu/menu_log_out.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/menu_item_user"
-        android:title="@string/open" />
+        android:title="@string/profile" />
 
     <item
         android:id="@+id/menu_item_log_out"
