--- a/app/src/main/res/menu/menu_log_out.xml
+++ b/app/src/main/res/menu/menu_log_out.xml
@@ -9,4 +9,8 @@
     <item
         android:id="@+id/menu_item_log_out"
         android:title="@string/log_out" />
+
+    <item
+        android:id="@+id/menu_item_close"
+        android:title="@string/close" />
 </menu>
